--- a/css/global.css
+++ b/css/global.css
@@ -92,27 +92,57 @@ header {
 }
 .navlinks {
   display:flex;
-  gap:1rem;
-  align-items:center
+  gap:2rem;
+  align-items:center;
 }
 .navlinks a {
   color:var(--primary);
   text-decoration:none;
-  padding:0.45rem 0.6rem;
-  border-radius:8px
+  /* padding:0.45rem 0.6rem; */
+  /* border-radius:8px */
 }
-.navlinks a:hover {
+
+/* .navlinks a:hover {
   background-color:lightgray;
+} */
+.navlink {
+    position: relative;
+    display: inline-block;
+    padding: 0.25rem 0;
+    text-decoration: none;
+    color: white;
+}
+
+.navlink::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 100%;
+    width: 0%;
+    height: 2px;
+    display: block;
+    /* height: 1rem; */
+    background: var(--white);
+    transition: all 0.4s cubic-bezier(0, 0.5, 0, 1); /* smooth extend & retract */
+}
+
+.navlink:hover::after {
+    right: 0%;
+    width: 100%;
+    height: 2px;
+    background: grey;
 }
 .cta {
-  background:var(--accent);
-  color:var(--primary);
+  /* background:var(--accent);
+  color:var(--primary); */
   padding:0.5rem 0.9rem;
   border-radius:8px;
   font-weight:700;
   text-decoration:none
 }
-
+.cta:hover::after {
+  background: black;
+}
 
 /* Mobile menu */
 .mobile-toggle {
