--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,8 @@
 
 /* Make the hero full-height and side-by-side */
 .hero {
-  background: #0b2745;                  /* solid fallback color */
+  /* background: #0b2745;                  solid fallback color */
+  background: transparent;
   position: relative;
 }
 
@@ -56,7 +57,8 @@
   position: relative;
   min-height: 70vh;
   overflow: hidden;
-  background-color: #0b2745;
+  /* background-color: #0b2745; */
+  background: transparent;
 }
 
 .slideshow-container img {
@@ -83,16 +85,22 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background:
+  inset: 0;
+  /* background:
     linear-gradient(to right, #0b2745 0%, transparent 75%),
-    linear-gradient(to bottom, #0b2745 0%, transparent 10%, transparent 90%, #0b2745 100%);
+    linear-gradient(to bottom, #0b2745 0%, transparent 10%, transparent 90%, #0b2745 100%); */
+
+  background:
+    linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 75%),
+    linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 1) 100%);
+
   pointer-events: none;
   z-index: 1;
 }
 
 /* Make the hero full-height and side-by-side */
 .hero {
-  background: #0b2745;                  /* solid fallback color */
+  /* background: #0b2745;                  solid fallback color */
   position: relative;
 }
 
