--- a/services/services.css
+++ b/services/services.css
@@ -1,9 +1,9 @@
 /* Services */
 .services {
   padding:3rem 0;
-  background:
+  /* background:
     linear-gradient(to bottom, #10304a 0%, transparent 75%, #061424),
-    linear-gradient(180deg, #10304a, #061424);
+    linear-gradient(180deg, #10304a, #061424); */
 }
 .service-grid {
   display:grid;
